# jira_weekly_report

./: .gitignore  .mergify.yml  README.md  config.example.toml  pyproject.toml
jira_weekly_report/: __init__.py  jira_wrapper.py  main.py
prompts/: image_generation
