[tool.poetry]
name = "jira-weekly-report"
version = "0.1.0"
description = "Script for generating weekly report from JIRA tickets"
authors = ["Michal Konecny <mkonecny@redhat.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "jira_weekly_report"}]

[tool.poetry.dependencies]
python = "^3.12"
jira = "^3.8.0"
click = "^8.1.7"
arrow = "^1.3.0"
Pillow = "^10.2.0"

[tool.poetry.scripts]
jira_weekly_report = "jira_weekly_report.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
